--- a/View/Views/HabrDataShower/GetHabrArticlsList.cshtml
+++ b/View/Views/HabrDataShower/GetHabrArticlsList.cshtml
@@ -1,11 +1,9 @@
-﻿@addTagHelper *, View.Components
-
-@using Model.Types
+﻿@using Model.Types
 @model List<ArticleShortInfo>
 
 <div style="display:flex">
     @for (int i = 0; i < Model.Count; i++)
     {
-        @Html.PartialAsync("ArticlComponent")
+        @await Html.PartialAsync("ArticlShortInfoComponent", Model[i])
     }
 </div>
